--- a/Monopoly/app/src/main/res/layout/activity_main.xml
+++ b/Monopoly/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,53 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:gravity="center"
+        android:text="BestMonopolyEver"
+        android:textColor="#000000"
+        android:textSize="20dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <ImageView
+        android:id="@+id/PlayBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/playButton"
+        android:gravity="center"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </FrameLayout>
+
+    <Button
+        android:id="@+id/buttonPlay"
+        android:layout_width="@+id/PlayBtn"
+        android:layout_height="@+id/PlayBtn"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text=""
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/PlayBtn"
+        app:layout_constraintEnd_toEndOf="@+id/PlayBtn"
+        app:layout_constraintStart_toStartOf="@+id/PlayBtn"
+        app:layout_constraintTop_toTopOf="@+id/PlayBtn" />
+        -->
+
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Monopoly!"
+        android:text="@string/app_name"
         android:textColor="#AA0000"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +64,7 @@
     <Button
         android:id="@+id/buttonPlay"
         android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
@@ -30,12 +72,31 @@
         android:background="#7d20f5"
         android:contentDescription="TODO"
         android:text="@string/buttonPlay"
-        android:textColor="#ed0657"
+        android:textColor="#ffffff"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/buttonExit"
+        android:layout_width="100dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="#7d20f5"
+        android:contentDescription="TODO"
+        android:text="@string/buttonExit"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPlay"
         app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
