--- a/Fahrenheit/app/src/main/res/layout/custom_card_view.xml
+++ b/Fahrenheit/app/src/main/res/layout/custom_card_view.xml
@@ -1,22 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <FrameLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent" android:layout_height="wrap_content">
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/black"
+    >
+
+        <TextView
+                android:id="@+id/textLabel"
+                android:background="@drawable/background_label"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black">
-                <TextView
-                        android:id="@+id/textLabel"
-                        android:background="@drawable/background_label"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="17dp"
-                        android:textSize="17sp"
-                        android:fontFamily="@font/my_font"
-                        android:text="...сюжет..."
-                        android:textColor="@android:color/white"
-                />
-        </FrameLayout>
+                android:layout_height="wrap_content"
+                android:padding="17dp"
+                android:textSize="17sp"
+                android:fontFamily="@font/my_font"
+                android:text="...сюжет..."
+                android:textColor="@android:color/white"
+        />
+
+        <TextView
+                android:maxWidth="180dp"
+                android:singleLine="false"
+                android:id="@+id/answer_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="17dp"
+                android:textSize="17sp"
+                android:text="First"
+                android:fontFamily="@font/my_font"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@id/textLabel"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/helper"
+        />
+
+        <View
+                android:id="@+id/helper"
+                android:layout_width="1dp"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toBottomOf="@id/textLabel"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+        />
+
+        <TextView
+                android:maxWidth="180dp"
+                android:singleLine="false"
+                android:id="@+id/answer_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="17dp"
+                android:textSize="17sp"
+                android:text="Second"
+                android:fontFamily="@font/my_font"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@+id/textLabel"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/helper"
+        />
+
+
+        <TextView
+                android:maxWidth="180dp"
+                android:singleLine="false"
+                android:id="@+id/answer_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="17dp"
+                android:textSize="17sp"
+                android:layout_marginTop="8dp"
+                android:text="Third"
+                android:fontFamily="@font/my_font"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@id/answer_1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+        />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
