--- a/Fahrenheit/app/src/main/res/values/styles.xml
+++ b/Fahrenheit/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
     </style>
 
 </resources>
