--- a/app/src/main/res/layout/fragment_rename.xml
+++ b/app/src/main/res/layout/fragment_rename.xml
@@ -20,8 +20,8 @@
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:text="@string/enter_name"
+                android:inputType="none"
+                android:hint="@string/enter_name"
                 android:ems="10"
                 android:id="@+id/enter_name_player_1"
                 android:layout_weight="1"/>
@@ -40,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="@string/enter_name"
+                android:hint="@string/enter_name"
                 android:ems="10"
                 android:id="@+id/enter_name_player_2"
                 android:layout_weight="1"/>
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
-                android:text="@string/enter_name"
+                android:hint="@string/enter_name"
                 android:ems="10"
                 android:id="@+id/enter_name_bot"
                 android:layout_weight="1"/>
