--- a/app/src/main/res/layout/fragment_rename.xml
+++ b/app/src/main/res/layout/fragment_rename.xml
@@ -20,7 +20,7 @@
         <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="none"
+                android:inputType="textPersonName"
                 android:hint="@string/enter_name"
                 android:ems="10"
                 android:id="@+id/enter_name_player_1"
