--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginBottom="@dimen/navigation_height">
 
     </FrameLayout>
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_menu"
         android:layout_width="match_parent"
         android:layout_height="@dimen/navigation_height"
@@ -24,5 +24,5 @@
         app:itemTextColor="@drawable/menu_ic_color_state"
         app:menu="@menu/bottom_navigation_menu"
         >
-    </android.support.design.widget.BottomNavigationView>
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 </RelativeLayout>
